--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
   <body>
       <div>
           <div>
-              <p><span>span 1</span></p>
+              <span>span 1</span>
           </div>
           <div>
               <p>1</p>
           </div>
           <div>
-              <p><span>span 2</span></p>
+              <span>span 2</span>
           </div>
           <div>
               <p>2</p>
           </div>
           <div>
-              <p><span>span 3</span></p>
+              <span>span 3</span>
           </div>
           <div>
               <p>3</p>
           </div>
           <div>
-              <p><span>span 4</span></p>
+              <span>span 4</span>
           </div>
           <div>
               <p>4</p>
           </div>
           <div>
-              <p><span>span 5</span></p>
+              <span>span 5</span>
           </div>
           <div>
               <p>5</p>
