--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="Janicek">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jquery</title>
+    <title>Carousele</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script><script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
   </head>
   <body>
+    <div id="Carousele">
+      <ul>
+        <li><img src="https://images.pexels.com/photos/1562/italian-landscape-mountains-nature.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
+        <li><img src="https://images.pexels.com/photos/618833/pexels-photo-618833.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
+        <li><img src="https://images.pexels.com/photos/247478/pexels-photo-247478.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
+        <li><img src="https://images.pexels.com/photos/326235/pexels-photo-326235.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
+      </ul>
+    </div>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
