--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carousele</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
@@ -19,6 +20,12 @@
         <li><img src="https://images.pexels.com/photos/326235/pexels-photo-326235.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
         <li><img src="https://images.pexels.com/photos/326235/pexels-photo-326235.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
       </ul>
+    </div>
+    <div class="icon1">
+      <i class="fas fa-angle-double-right fa-5x"></i>
+    </div>
+    <div class="icon2">
+      <i class="fas fa-angle-double-left fa-5x"></i>
     </div>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
