--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
   <body>
     <div id="carousele">
       <ul>
-        <li><img src="https://images.pexels.com/photos/1562/italian-landscape-mountains-nature.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
-        <li><img src="https://images.pexels.com/photos/618833/pexels-photo-618833.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
-        <li><img src="https://images.pexels.com/photos/247478/pexels-photo-247478.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
-        <li><img src="https://images.pexels.com/photos/326235/pexels-photo-326235.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
-        <li><img src="https://images.pexels.com/photos/326235/pexels-photo-326235.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
+        <li id="1"><img src="https://images.pexels.com/photos/1562/italian-landscape-mountains-nature.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
+        <li id="2"><img src="https://images.pexels.com/photos/618833/pexels-photo-618833.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
+        <li id="3"><img src="https://images.pexels.com/photos/247478/pexels-photo-247478.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
+        <li id="4"><img src="https://images.pexels.com/photos/326235/pexels-photo-326235.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
+        <li id="5"><img src="https://images.pexels.com/photos/326235/pexels-photo-326235.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="photo"></li>
       </ul>
     </div>
+    <div class="arrows">
+      <div class="icon2">
+        <i class="fas fa-angle-double-left fa-3x"></i>
+      </div>
     <div class="icon1">
-      <i class="fas fa-angle-double-right fa-5x"></i>
+      <i class="fas fa-angle-double-right fa-3x"></i>
     </div>
-    <div class="icon2">
-      <i class="fas fa-angle-double-left fa-5x"></i>
-    </div>
+    </div>        
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
